feat: تحديث الترجمة واستبدال مصطلح "ممرض/ة" بـ "موظف" + تحسينات UI وأداء
- استبدال كل ظهور لكلمة "ممرض/ة" بكلمة "موظف" في ملف اللغة العربية ar.json.
- تحسين طريقة تركيب رقم الهاتف بإزالة الأصفار الزائدة عبر extension removeZerosInFirst.
- إضافة ملف string_helper.dart لتوسيع إمكانيات التعامل مع النصوص.
- تحسين شاشة سبلاش بإضافة حركة BouncyWidget على اللوجو.
- إصلاح مشكلة إعادة التوجيه في حال انقطاع الإنترنت باستخدام checkInternet المحسّنة.
- تحسين مكونات عرض البانر في BannerView لتكون أكثر تجاوبًا وانسيابية.
- إخفاء زر تغيير اللغة إذا لم يكن هناك سوى لغة واحدة مفعّلة.
- ترقية مكتبات pubspec.yaml مثل shared_preferences وfirebase_* لتوافق أفضل.

--- a/full_care_user/assets/language/ar.json
+++ b/full_care_user/assets/language/ar.json
@@ -8,7 +8,7 @@
   "on_boarding_3_title": "تسليم سريع",
   "on_boarding_1_description": "حدد موقعك لرؤية مكاتب التمريض واسعة النطاق واطلب العنصر الذي تريده.",
   "on_boarding_2_description": "اطلب العنصر باستخدام الدفع عند الاستلام أو الدفع عن طريق بوابة دفع أكثر أمانًا وأسرع.",
-  "on_boarding_3_description": "المئات من الممرضين ينتظرون طلبك. لذا قم بتقديم طلبك واحصل على المنتج الذي يتم توصيله إلى باب منزلك!",
+  "on_boarding_3_description": "المئات من الموظفين ينتظرون طلبك. لذا قم بتقديم طلبك واحصل على المنتج الذي يتم توصيله إلى باب منزلك!",
   "skip": "تخطي",
   "next": "التالي",
   "get_started": "ابدأ",
@@ -187,7 +187,7 @@
   "your_order_is_failed_to_place_because": "فشل طلبك بسبب فشل عملية الدفع. يرجى التأكد من الدفع الناجح لتقديم الطلب.",
   "your_order_is_placed_successfully": "تم تقديم طلبك بنجاح. نبدأ عملية التسليم وسوف تتلقى البند الخاص بك قريبا.",
   "order_racking": "تتبع الطلب",
-  "delivery_man": "ممرض/ة",
+  "delivery_man": "موظف",
   "order_placed": "تم تقديم الطلب",
   "order_confirmed": "تم تأكيد الطلب",
   "preparing_item": "تحضير السلعة",
@@ -199,7 +199,7 @@
   "order_details": "تفاصيل الطلب",
   "rate_and_review": "معدل ومراجعة",
   "rate_the_item": "قيم العنصر",
-  "rate_the_delivery_man": "قيم ممرض/ة",
+  "rate_the_delivery_man": "قيم موظف",
   "share_your_opinion": "شارك برأيك",
   "write_your_review_here": "أكتب رأيك هنا....",
   "submit": "يُقدِّم",
@@ -328,7 +328,7 @@
   "the_minimum_item_purchase_amount_for_this_coupon_is": "الحد الأدنى لمبلغ الشراء لهذه القسيمة هو",
   "but_you_have": "ولكن لديك",
   "non_changeable": "غير قابلة للتغيير",
-  "delivery_man_not_assigned": "لم يتم تعيين ممرض/ة بعد",
+  "delivery_man_not_assigned": "لم يتم تعيين موظف بعد",
   "payment": "قسط",
   "scheduled_at": "المقرر في",
   "address": "العنوان",
@@ -377,7 +377,7 @@
   "min_purchase": "الحد الأدنى للشراء",
   "max_discount": "ماكس الخصم",
   "coupon_code_copied": "تم نسخ رمز القسيمة",
-  "join_as_a_delivery_man": "انضم ك ممرض/ة",
+  "join_as_a_delivery_man": "انضم كموظف",
   "join_as_a_restaurant": "انضم مكتب تمريض",
   "join_as_a_store": "انضم كمتجر",
   "are_you_sure_want_to_delete_address": "هل أنت متأكد أنك تريد حذف العنوان",
@@ -464,13 +464,13 @@
   "excellent_shopping_experience": "تجربة تسوق ممتازة",
   "easy_checkout_and_payment_system": "سهولة الخروج ونظام الدفع",
   "become_a_seller": "كن بائعًا",
-  "become_a_delivery_man": "كن ممرض/ة",
+  "become_a_delivery_man": "كن موظف",
   "register_as_seller_and_open_shop_in": "سجل كبائع وافتح متجرًا في",
   "to_start_your_business": "لبدء عملك",
   "explore_more": "اكتشف المزيد",
   "pick_from_map": "اختر من الخريطة",
   "register": "يسجل",
-  "register_as_delivery_man_and_earn_money": "سجل  كممرض/ة توصيل واكسب المال",
+  "register_as_delivery_man_and_earn_money": "سجل  كموظف توصيل واكسب المال",
   "version_1.4": "الإصدار 1.4",
   "street_number": "رقم الشارع",
   "house": "منزل",
@@ -501,7 +501,7 @@
   "transaction_history": "تاريخ المعاملات",
   "pay_from_your_existing_balance": "ادفع من رصيدك الحالي",
   "wallet_payment": "الدفع بالمحفظة",
-  "delivery_man_tips": "نصائح ممرض/ة",
+  "delivery_man_tips": "نصائح موظف",
   "enter_amount": "أدخل المبلغ..",
   "refer_and_earn": "الرجوع وكسب",
   "earn_money_on_every_referral": "كسب المال على كل إحالة",
@@ -563,16 +563,16 @@
   "login_information": "معلومات تسجيل الدخول",
   "latitude": "خط العرض",
   "longitude": "خط الطول",
-  "add_delivery_man": "إضافة ممرض/ة",
-  "enter_delivery_man_first_name": "أدخل الاسم الأول لممرض/ة",
-  "enter_delivery_man_last_name": "أدخل الاسم الأخير لممرض/ة",
-  "enter_delivery_man_email_address": "أدخل عنوان البريد الإلكتروني لممرض/ة",
-  "enter_delivery_man_phone_number": "أدخل رقم هاتف ممرض/ة",
+  "add_delivery_man": "إضافة موظف",
+  "enter_delivery_man_first_name": "أدخل الاسم الأول لموظف",
+  "enter_delivery_man_last_name": "أدخل الاسم الأخير لموظف",
+  "enter_delivery_man_email_address": "أدخل عنوان البريد الإلكتروني لموظف",
+  "enter_delivery_man_phone_number": "أدخل رقم هاتف موظف",
   "enter_a_valid_phone_number": "أدخل رقم هاتف صالحًا",
-  "enter_password_for_delivery_man": "أدخل كلمة المرور لممرض/ة",
-  "enter_delivery_man_identity_number": "أدخل رقم هوية ممرض/ة",
-  "upload_delivery_man_image": "تحميل صورة ممرض/ة",
-  "delivery_man_registration_successful": "تم تسجيل ممرض/ة بنجاح",
+  "enter_password_for_delivery_man": "أدخل كلمة المرور لموظف",
+  "enter_delivery_man_identity_number": "أدخل رقم هوية موظف",
+  "upload_delivery_man_image": "تحميل صورة موظف",
+  "delivery_man_registration_successful": "تم تسجيل موظف بنجاح",
   "store_registration_successful": "تم تسجيل المتجر بنجاح",
   "passport": "جواز سفر",
   "driving_license": "رخصة القيادة",
@@ -580,10 +580,10 @@
   "identity_type": "نوع الهوية",
   "identity_number": "رقم الهوية",
   "enter_identity_number": "أدخل رقم الهوية",
-  "delivery_man_image": "صورة ممرض/ة",
+  "delivery_man_image": "صورة موظف",
   "identity_images": "صور الهوية",
-  "delivery_man_registration": "تسجيل ممرض/ة",
-  "delivery_man_type": "نوع ممرض/ة",
+  "delivery_man_registration": "تسجيل موظف",
+  "delivery_man_type": "نوع موظف",
   "freelancer": "مستقل",
   "salary_based": "على أساس الراتب",
   "find_nearby_store_near_you": "البحث عن مكان قريب \nمتجر قريب منك",
@@ -757,7 +757,7 @@
   "outside_of_city": "خارج المدينة",
   "no_trip_found": "لم يتم العثور على رحلة",
   "recommended_items": "العناصر الموصى بها",
-  "please_select_vehicle_for_the_deliveryman": "الرجاء اختيار مركبة لممرض/ة",
+  "please_select_vehicle_for_the_deliveryman": "الرجاء اختيار مركبة لموظف",
   "vehicle_type": "نوع المركبة",
   "select_cancellation_reasons": "حدد أسباب الإلغاء",
   "no_reasons_available": "لا توجد أسباب متاحة",
@@ -783,7 +783,7 @@
   "my_wallet": "محفظتي",
   "earnings": "الأرباح",
   "open_store": "افتح المتجر",
-  "complete_registration_process_to_serve_as_delivery_man": "استكمال عملية التسجيل ليكون بمثابة ممرض/ة",
+  "complete_registration_process_to_serve_as_delivery_man": "استكمال عملية التسجيل ليكون بمثابة موظف",
   "upload_deliveryman_photo": "تحميل صورة \nموظف التوصيل",
   "select_vehicle_type": "اختر نوع المركبة",
   "upload_identity_image": "تحميل صورة الهوية",
@@ -793,7 +793,7 @@
   "1_lower_case": "1 حالة صغيرة",
   "1_special_character": "1 شخصية خاصة",
   "provide_valid_password": "توفير كلمة مرور صالحة",
-  "pick_delivery_man_profile_image": "اختر الصورة الشخصية لممرض/ة",
+  "pick_delivery_man_profile_image": "اختر الصورة الشخصية لموظف",
   "provide_store_information_to_proceed_next": "قم بتوفير معلومات المتجر للمتابعة بعد ذلك",
   "upload_store_logo": "تحميل شعار المتجر",
   "upload_store_cover": "تحميل غلاف المتجر",
@@ -854,7 +854,7 @@
   "no_need_cutlery": "لا حاجة لأدوات طبية",
   "delivery_instruction": "تعليمات التسليم",
   "unavailable_item_note": "ملاحظة العنصر غير متوفر",
-  "delivery_man_information": "معلومات ممرض/ة",
+  "delivery_man_information": "معلومات موظف",
   "points_it_will_add_to": "النقاط، ستضيف إلى ولائك بعد إكمال الطلب",
   "6_character": "8+ حرف",
   "your_privacy_matters": "مسائل الخصوصية الخاصة بك",
@@ -889,7 +889,7 @@
   "please_select_module_first": "الرجاء تحديد الوحدة أولاً",
   "please_select_zone": "الرجاء تحديد المنطقة",
   "delivery_details": "تفاصيل التسليم",
-  "delivery_man_details": "تفاصيل الممرض/ة",
+  "delivery_man_details": "تفاصيل الموظف",
   "from_store": "من المتجر",
   "cash": "نقدي",
   "digital": "رقمي",
@@ -952,7 +952,7 @@
   "code_copied": "تم نسخ الكود!",
   "join_as_store": "انضم كمتجر",
   "cover_image": "صورة الغلاف",
-  "join_as_delivery_man": "انضم كممرض/ة ",
+  "join_as_delivery_man": "انضم كموظف ",
   "most_tipped": "الأكثر يميل",
   "click_one_of_the_option_below": "(انقر فوق أحد الخيارات أدناه)",
   "pay_via_online": "الدفع عبر الإنترنت",
@@ -1048,7 +1048,7 @@
   "your_order": "طلبك",
   "order_accepted": "تم قبول الطلب",
   "order_is_on_the_way": "الطلب في الطريق",
-  "your_delivery_man_is_coming": "ممرض/ةالخاص بك قادم",
+  "your_delivery_man_is_coming": "موظفالخاص بك قادم",
   "order_delivered": "تم تسليم الطلب",
   "bringing_happiness_from_door_to_door": "جلب السعادة من الباب إلى الباب",
   "ready_to_send_something_special": "على استعداد لإرسال شيء خاص؟",
