feat: rename app to FULL CARE and enhance support screen UI
- Updated app name from "Full Care U" to "FULL CARE" across AndroidManifest, Info.plist, app constants, and notifications
- Improved Arabic and English translations for better clarity and consistency
- Replaced marker icon with new `picker.png` for location selection
- Enhanced support screen with:
  - Live chat and WhatsApp buttons
  - New layout and styling using SupportButtonWidget
  - Support for custom image icons (e.g., WhatsApp icon)
- Improved validation by replacing `validateEmptyText` with `validatePassword` where appropriate
- Temporarily removed live chat from menu screen

--- a/full_care_user/assets/language/ar.json
+++ b/full_care_user/assets/language/ar.json
@@ -153,7 +153,7 @@
   "add_new_address": "إضافة عنوان جديد",
   "home": "الرئيسيه",
   "office": "مكتب",
-  "others": "آحرون",
+  "others": "عناوين اخري",
   "delivery_address": "عنوان التسليم",
   "add_the_location_correctly": "أضف الموقع بشكل صحيح",
   "contact_person_name": "اسم جهة الاتصال",
@@ -174,7 +174,7 @@
   "quick_contact": "اتصال سريع",
   "enter_message": "أدخل الرسالة",
   "send": "يرسل",
-  "checkout": "الدفع",
+  "checkout": "اتمام الطلب",
   "preference_time": "الوقت المفضل",
   "today": "اليوم",
   "tomorrow": "غداً",
@@ -193,7 +193,7 @@
   "preparing_item": "تحضير السلعة",
   "delivery_on_the_way": "التسليم في الطريق",
   "view_on_map": "عرض على الخريطة",
-  "back_to_home": "العودة إلى المنزل",
+  "back_to_home": "العودة إلى الرئيسيه",
   "trip_route": "طريق الرحلة",
   "call": "اتصل",
   "order_details": "تفاصيل الطلب",
@@ -537,6 +537,7 @@
   "version_5.8": "الإصدار 5.8",
   "write_something": "أكتب شيئا...",
 "live_chat": "تحدث معنا الآن",
+"contact_with_our_team":"تواصل مع فريق الدعم",
   "chat": "محادثة",
   "whatsapp": "واتس اب",
   "store_name": "اسم المتجر",
@@ -845,7 +846,7 @@
   "ex_jhon": "على سبيل المثال: جون",
   "ex_doe": "على سبيل المثال: ظبية",
   "enter_email": "أدخل البريد الإلكتروني",
-  "8_character": "8 + شخصية",
+  "8_character": "8 + حرف",
   "enter_refer_code": "أدخل رمز الإحالة",
   "general_information": "معلومات عامة",
   "login_info": "معلومات تسجيل الدخول",
