--- a/full_care_user/assets/language/en.json
+++ b/full_care_user/assets/language/en.json
@@ -97,7 +97,7 @@
   "apply": "Apply",
   "delivery_option": "Delivery Option",
   "home_delivery": "Home Delivery",
-  "take_away": "Take Away",
+  "take_away": "Pick Up From Branch",
   "item_price": "Item Price",
   "vat_tax": "Vat/Tax",
   "subtotal": "Subtotal",
@@ -153,7 +153,7 @@
   "add_new_address": "Add New Address",
   "home": "Home",
   "office": "Office",
-  "others": "Others",
+  "others": "Other Addresses",
   "delivery_address": "Delivery Address",
   "add_the_location_correctly": "Add the location Correctly",
   "contact_person_name": "Contact Person Name",
@@ -174,7 +174,7 @@
   "quick_contact": "QUICK CONTACT",
   "enter_message": "Enter message",
   "send": "Send",
-  "checkout": "Checkout",
+  "checkout": "Confirm Order",
   "preference_time": "Preference Time",
   "today": "Today",
   "tomorrow": "Tomorrow",
@@ -537,6 +537,7 @@
   "version_5.8": "Version 5.8",
   "write_something": "Write Something...",
   "live_chat": "Live Chat",
+  "contact_with_our_team": "Contact with our team ",
   "chat": "Chat",
   "whatsapp": "Whatsapp",
   "store_name": "Store Name",
