chore: update mobile version label in splash screen
- Renamed version constant to `mobileVersion` for consistent camelCase usage
- Updated displayed version in splash screen to reflect new release `9.9.2`

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1,4 +1,7 @@
 {
+  "landmark": "علامة مميزة",
+  "write_landmark": "أدخل علامة مميزة قريبة",
+  "please_upload_lower_size_file": "يرجى رفع ملف بحجم أصغر",
   "connection_to_api_server_failed": "فشل الاتصال بخادم API بسبب الاتصال بالإنترنت",
   "select_language": "اختر اللغة",
   "save": "حفظ",
@@ -60,7 +63,7 @@
   "new_password": "كلمة المرور الجديدة",
   "reset_password": "إعادة تعيين كلمة المرور",
   "cancel": "الغاء",
-"history": "السجل",
+  "history": "السجل",
   "clear_all": "مسح الكل",
   "suggestions": "اقتراحات",
   "item_name": "اسم العنصر",
@@ -108,7 +111,7 @@
   "place_order": "تأكيد الطلب",
   "favorite": "المفضله",
   "my_orders": "طلباتي",
-"running": "قيد التنفيذ",
+  "running": "قيد التنفيذ",
   "order_id": "معرف الطلب",
   "details": "تفاصيل",
   "track_order": "تتبع الطلب",
@@ -246,7 +249,7 @@
   "processing": "يعالج",
   "confirmed": "مؤكد",
   "handover": "التسليم",
-"picked_up": "تم الاستلام",
+  "picked_up": "تم الاستلام",
   "delivered": "تم التوصيل",
   "refund_requested": "طلب استرداد الأموال",
   "refunded": "ردها",
@@ -289,7 +292,7 @@
   "additional_note": "ملاحظة إضافية",
   "no_suggestions_available": "لا توجد اقتراحات متاحة",
   "delivery_verification_code": "رمز التحقق من التسليم",
-"variations": "الاختيارات المتاحة",
+  "variations": "الاختيارات المتاحة",
   "restaurant_details": "تفاصيل مكتب التمريض",
   "store_details": "تفاصيل المتجر",
   "direction": "اتجاه",
@@ -370,7 +373,7 @@
   "no_category_store_found": "لم يتم العثور على متجر فئة",
   "social_login": "تسجيل الدخول الاجتماعي",
   "type": "يكتب",
-"restaurant_wise": "تصنيف حسب مكتب التمريض",
+  "restaurant_wise": "تصنيف حسب مكتب التمريض",
   "store_wise": "متجر الحكمة",
   "zone_wise": "المنطقة الحكيمة",
   "default": "تقصير",
@@ -536,8 +539,8 @@
   "write_somethings": "اكتب شيئا",
   "version_5.8": "الإصدار 5.8",
   "write_something": "أكتب شيئا...",
-"live_chat": "تحدث معنا الآن",
-"contact_with_our_team":"تواصل مع فريق الدعم",
+  "live_chat": "تحدث معنا الآن",
+  "contact_with_our_team": "تواصل مع فريق الدعم",
   "chat": "محادثة",
   "whatsapp": "واتس اب",
   "store_name": "اسم المتجر",
@@ -1320,7 +1323,6 @@
   "enter_name": "أدخل الاسم",
   "timed_out_please_try_again_after_few_minutes": "انتهت المهلة. يرجى المحاولة مرة أخرى بعد بضع دقائق",
   "from_you": "منك",
-
   "enter_your_pick_up_point": "أدخل نقطة الاستلام",
   "trip_location": "موقع الرحلة",
   "pickup_time": "وقت الاستلام",
@@ -1432,13 +1434,13 @@
   "make_payment": "قم بالدفع",
   "select_from_map": "اختر من الخريطة",
   "pickup_address": "عنوان الاستلام",
-  "new_arrival" : "وصول جديد",
+  "new_arrival": "وصول جديد",
   "you_can_not_add_more_then": "لا يمكنك إضافة أكثر من",
   "you_cannot_select_before_current_time": "لا يمكنك الاختيار قبل الوقت الحالي",
   "overall_rating": "التقييم العام",
   "your_trip_is": "رحلتك هي",
   "proceed": "المتابعة",
-  "code" : "شفرة",
+  "code": "شفرة",
   "you_are_not_logged_in_to_explore_feature": "لم تقم بتسجيل الدخول. لاستكشاف هذه الميزة، يرجى تسجيل الدخول.",
   "set_pickup_location": "تعيين موقع الاستلام",
   "set_destination_location": "تعيين موقع الوجهة",
@@ -1447,7 +1449,6 @@
   "trips": "الرحلات",
   "your_cart_is_empty": "سلة التسوق الخاصة بك فارغة",
   "please_enter_valid_estimate_time": "يرجى إدخال وقت تقديري صالح",
-
   "payment_failed": "فشل الدفع",
   "vendor_registration": "تسجيل المورد",
   "vendor_info": "معلومات المورد",
@@ -1499,7 +1500,6 @@
   "your_cart_has_been_cleared_as_the_selected_zone_does_not_support_the_previous_pickup_point": "تم مسح سلة التسوق الخاصة بك لأن المنطقة المحددة لا تدعم نقطة الاستلام السابقة.",
   "you_cant_add_more_than": "لا يمكنك إضافة أكثر من",
   "quantities_of_this_vehicle": "كميات هذه المركبة",
-
   "additional_discount": "خصم إضافي",
   "forgot_your_password": "هل نسيت كلمة المرور؟",
   "please_enter_the_registered_phone_where_you_want": "يرجى إدخال رقم الهاتف المسجل الذي ترغب في إرسال رمز استعادة كلمة المرور إليه.",
