--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -1,4 +1,7 @@
 {
+  "landmark": "Landmark",
+  "write_landmark": "Enter a nearby landmark",
+  "please_upload_lower_size_file": "Please upload a smaller file",
   "connection_to_api_server_failed": "Connection to API server failed due to internet connection",
   "select_language": "Select Language",
   "save": "Save",
@@ -1320,8 +1323,6 @@
   "enter_name": "Enter Name",
   "timed_out_please_try_again_after_few_minutes": "Timed out. Please try again after few minutes",
   "from_you": "from you",
-
-
   "enter_your_pick_up_point": "Enter your pickup point",
   "trip_location": "Trip Location",
   "pickup_time": "Pickup Time",
@@ -1426,20 +1427,20 @@
   "hrs": "hrs",
   "zone_already_added_please_select_another": "Zone already added please select another",
   "select_pick_zone": "Select pick zone",
-  "providers" : "Providers",
-  "you_have_reached_your_destination" : "You Have Reached your Destination.",
-  "your_last_trip" : "Your last trip",
-  "has_been_completed" : "has been completed recently. Please make the payment for the trip.",
-  "make_payment" : "Make Payment",
-  "select_from_map" : "Select From Map",
-  "pickup_address" : "Pickup Address",
-  "new_arrival" : "New Arrival",
-  "you_can_not_add_more_then" : "You can not add more then",
-  "you_cannot_select_before_current_time" : "You can not select before current time",
-  "overall_rating" : "Overall Rating",
-  "your_trip_is" : "Your trip is",
-  "proceed" : "Proceed",
-  "code" : "Code",
+  "providers": "Providers",
+  "you_have_reached_your_destination": "You Have Reached your Destination.",
+  "your_last_trip": "Your last trip",
+  "has_been_completed": "has been completed recently. Please make the payment for the trip.",
+  "make_payment": "Make Payment",
+  "select_from_map": "Select From Map",
+  "pickup_address": "Pickup Address",
+  "new_arrival": "New Arrival",
+  "you_can_not_add_more_then": "You can not add more then",
+  "you_cannot_select_before_current_time": "You can not select before current time",
+  "overall_rating": "Overall Rating",
+  "your_trip_is": "Your trip is",
+  "proceed": "Proceed",
+  "code": "Code",
   "you_are_not_logged_in_to_explore_feature": "You are not logged in. To explore this feature, please log in.",
   "set_pickup_location": "Set Pickup Location",
   "set_destination_location": "Set Destination Location",
@@ -1448,78 +1449,75 @@
   "trips": "Trips",
   "your_cart_is_empty": "Your Cart is Empty",
   "please_enter_valid_estimate_time": "Please enter valid estimate time",
-
-
-  "payment_failed" : "Payment Failed",
-  "vendor_registration" : "Vendor Registration",
-  "vendor_info" : "Vendor Info",
-  "join_as_vendor" : "Join as Vendor",
-  "write_vendor_name" : "Write Vendor Name",
-  "vendor_name" : "Vendor Name",
-  "vendor_name_field_is_required" : "Vendor name field is required",
-  "vendor_logo" : "Vendor Logo",
-  "upload_vendor_logo" : "Upload Vendor Logo",
-  "vendor_cover" : "Vendor Cover",
-  "upload_vendor_cover" : "Upload Vendor Cover",
-  "vendor_preference" : "Vendor Preference",
-  "vendor_vat_tax_field_is_required" : "Vendor VAT Tax field is required",
-  "this_info_will_need_for_vendor_app_and_panel_login" : "This info will need for vendor app and panel login",
-  "vendor_will_pay" : "Vendor will pay",
-  "run_vendor_by_purchasing_subscription_packages" : "Run vendor by purchasing subscription packages. You will have access the features of in vendor panel , app and interaction with user according to the subscription packages.",
-  "vendor_information" : "Vendor Information",
-  "write_vendor_address" : "Write vendor address",
-  "vendor_address_field_is_required" : "Vendor address field is required",
-  "enter_vendor_name" : "Enter vendor name",
-  "select_vendor_logo" : "Select vendor logo",
-  "select_vendor_cover_photo" : "Select vendor cover photo",
-  "set_vendor_location" : "Set vendor location",
-  "provide_vendor_information_to_proceed_next" : "Provide vendor information to proceed next",
-  "open_vendor" : "Open Vendor",
-  "write_trip_id" : "Write Trip ID",
-  "coupon_applied_successfully" : "Coupon applied successfully",
-  "trip_booking" : "Trip booking",
-  "pickup" : "Pickup",
-  "trip" : "Trip",
-  "taxi_bill_info" : "Price may vary based on time or distance and total trip cost calculated accordingly.",
-  "estimated_pickup_time_time" : "Estimated Pickup Time",
-  "minimum_pickup_time_can_not_be_empty" : "Minimum pickup time can not be empty",
-  "maximum_pickup_time_can_not_be_empty" : "Maximum pickup time can not be empty",
-  "maximum_pickup_time_can_not_be_smaller_then_minimum_pickup_time" : "Maximum pickup time can not be smaller then minimum pickup time",
-  "max_trip" : "Max Trip",
-  "max_vehicle" : "Max Vehicle",
-  "clear_filter" : "Clear Filter",
-  "route_not_found" : "Route not found",
-  "vehicles_available" : "vehicles available",
-  "invite" : "Invite",
-  "locations_can_not_be_same" : "Locations can't be same",
-  "do_you_want_to_change_trip_type" : "Do you want to change trip type?",
-  "one_or_more_of_the_selected_vehicles_does_not_match_the_chosen_rental_type" : "One or more of the selected vehicles does not match the chosen rental type. Please ensure that the vehicle(s) you select match with preferred rental type.",
-  "are_you_sure_you_want_to_switch_from" : "Are you sure, you want to switch trip type from",
-  "based_to" : "based to",
-  "do_you_want_to_change_trip_duration" : "Do you want to change trip duration",
-  "are_you_sure_you_want_to_update_trip_duration_to" : "Are you sure you want to update trip duration to",
-  "your_cart_has_been_cleared_as_the_selected_zone_does_not_support_the_previous_pickup_point" : "Your cart has been cleared as the selected zone does not support the previous pickup point.",
-  "you_cant_add_more_than" : "You can't add more than",
-  "quantities_of_this_vehicle" : "quantities of this vehicle",
-  "approx_pickup_time" : "Approx. pickup time",
-  "discount_will_be_applicable_when_booking_amount_is_more_then" : "discount will be applicable when booking amount is more then",
-  "Max" : "Max",
-  "discount_is_applicable" : "discount is applicable",
-  "you_got" : "You got",
-
-  "additional_discount" : "additional discount",
-  "forgot_your_password" : "Forgot Your Password",
-  "please_enter_the_registered_phone_where_you_want" : "Please enter the registered phone where you want to sent your password recovery OTP.",
-  "please_enter_the_registered_email_where_you_want" : "Please enter the registered email where you want to sent your password recovery OTP.",
-  "request_otp" : "Request OTP",
-  "back_to" : "Back to",
-  "login_in" : "Log In",
-  "sorry_something_went_wrong" : "Sorry, something went wrong",
-  "please_try_again_after_some_time_or_contact_with_our_support_team" : "Please try again after some time or Contact with our support team.",
-  "request_reset_link" : "Request Reset Link",
-  "sort_by_a_to_z" : "Sort by: A to Z",
-  "sort_by_z_to_a" : "Sort by: Z to A",
-  "only_halal" : "Only Halal",
-  "only_veg" : "Only Veg",
-  "only_non_veg" : "Only Non-veg"
+  "payment_failed": "Payment Failed",
+  "vendor_registration": "Vendor Registration",
+  "vendor_info": "Vendor Info",
+  "join_as_vendor": "Join as Vendor",
+  "write_vendor_name": "Write Vendor Name",
+  "vendor_name": "Vendor Name",
+  "vendor_name_field_is_required": "Vendor name field is required",
+  "vendor_logo": "Vendor Logo",
+  "upload_vendor_logo": "Upload Vendor Logo",
+  "vendor_cover": "Vendor Cover",
+  "upload_vendor_cover": "Upload Vendor Cover",
+  "vendor_preference": "Vendor Preference",
+  "vendor_vat_tax_field_is_required": "Vendor VAT Tax field is required",
+  "this_info_will_need_for_vendor_app_and_panel_login": "This info will need for vendor app and panel login",
+  "vendor_will_pay": "Vendor will pay",
+  "run_vendor_by_purchasing_subscription_packages": "Run vendor by purchasing subscription packages. You will have access the features of in vendor panel , app and interaction with user according to the subscription packages.",
+  "vendor_information": "Vendor Information",
+  "write_vendor_address": "Write vendor address",
+  "vendor_address_field_is_required": "Vendor address field is required",
+  "enter_vendor_name": "Enter vendor name",
+  "select_vendor_logo": "Select vendor logo",
+  "select_vendor_cover_photo": "Select vendor cover photo",
+  "set_vendor_location": "Set vendor location",
+  "provide_vendor_information_to_proceed_next": "Provide vendor information to proceed next",
+  "open_vendor": "Open Vendor",
+  "write_trip_id": "Write Trip ID",
+  "coupon_applied_successfully": "Coupon applied successfully",
+  "trip_booking": "Trip booking",
+  "pickup": "Pickup",
+  "trip": "Trip",
+  "taxi_bill_info": "Price may vary based on time or distance and total trip cost calculated accordingly.",
+  "estimated_pickup_time_time": "Estimated Pickup Time",
+  "minimum_pickup_time_can_not_be_empty": "Minimum pickup time can not be empty",
+  "maximum_pickup_time_can_not_be_empty": "Maximum pickup time can not be empty",
+  "maximum_pickup_time_can_not_be_smaller_then_minimum_pickup_time": "Maximum pickup time can not be smaller then minimum pickup time",
+  "max_trip": "Max Trip",
+  "max_vehicle": "Max Vehicle",
+  "clear_filter": "Clear Filter",
+  "route_not_found": "Route not found",
+  "vehicles_available": "vehicles available",
+  "invite": "Invite",
+  "locations_can_not_be_same": "Locations can't be same",
+  "do_you_want_to_change_trip_type": "Do you want to change trip type?",
+  "one_or_more_of_the_selected_vehicles_does_not_match_the_chosen_rental_type": "One or more of the selected vehicles does not match the chosen rental type. Please ensure that the vehicle(s) you select match with preferred rental type.",
+  "are_you_sure_you_want_to_switch_from": "Are you sure, you want to switch trip type from",
+  "based_to": "based to",
+  "do_you_want_to_change_trip_duration": "Do you want to change trip duration",
+  "are_you_sure_you_want_to_update_trip_duration_to": "Are you sure you want to update trip duration to",
+  "your_cart_has_been_cleared_as_the_selected_zone_does_not_support_the_previous_pickup_point": "Your cart has been cleared as the selected zone does not support the previous pickup point.",
+  "you_cant_add_more_than": "You can't add more than",
+  "quantities_of_this_vehicle": "quantities of this vehicle",
+  "approx_pickup_time": "Approx. pickup time",
+  "discount_will_be_applicable_when_booking_amount_is_more_then": "discount will be applicable when booking amount is more then",
+  "Max": "Max",
+  "discount_is_applicable": "discount is applicable",
+  "you_got": "You got",
+  "additional_discount": "additional discount",
+  "forgot_your_password": "Forgot Your Password",
+  "please_enter_the_registered_phone_where_you_want": "Please enter the registered phone where you want to sent your password recovery OTP.",
+  "please_enter_the_registered_email_where_you_want": "Please enter the registered email where you want to sent your password recovery OTP.",
+  "request_otp": "Request OTP",
+  "back_to": "Back to",
+  "login_in": "Log In",
+  "sorry_something_went_wrong": "Sorry, something went wrong",
+  "please_try_again_after_some_time_or_contact_with_our_support_team": "Please try again after some time or Contact with our support team.",
+  "request_reset_link": "Request Reset Link",
+  "sort_by_a_to_z": "Sort by: A to Z",
+  "sort_by_z_to_a": "Sort by: Z to A",
+  "only_halal": "Only Halal",
+  "only_veg": "Only Veg",
+  "only_non_veg": "Only Non-veg"
 }
