--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -36,7 +36,7 @@
   "password_should_be": "يجب أن تكون كلمة المرور أكبر من 8 أحرف",
   "otp_verification": "التحقق من OTP",
   "enter_the_verification_sent_to": "أدخل رمز التحقق (OTP) المرسل إليه",
-  "verify": "يؤكد",
+  "verify": "تأكيد",
   "did_not_receive_the_code": "لم تتلق الرمز؟",
   "resend": "إعادة الإرسال",
   "verified": "تم التحقق منه",
@@ -58,7 +58,7 @@
   "all_restaurants": "جميع مكاتب التمريض",
   "all_stores": "جميع مكاتب التمريض",
   "please_enter_mobile": "يرجى إدخال رقم هاتفك المحمول المسجل حتى نتمكن من مساعدتك في استعادة كلمة المرور الخاصة بك.",
-  "done": "منتهي",
+  "done": "تم",
   "enter_new_password": "أدخل كلمة المرور الجديدة وقم بتأكيد كلمة المرور.",
   "new_password": "كلمة المرور الجديدة",
   "reset_password": "إعادة تعيين كلمة المرور",
@@ -176,7 +176,7 @@
   "edit_profile": "تحرير الملف الشخصي",
   "quick_contact": "اتصال سريع",
   "enter_message": "أدخل الرسالة",
-  "send": "يرسل",
+  "send": "ارسال",
   "checkout": "اتمام الطلب",
   "preference_time": "الوقت المفضل",
   "today": "اليوم",
@@ -223,7 +223,7 @@
   "choose_payment_method": "اختر طريقة الدفع",
   "no_slot_available": "لا توجد فتحات متاحة",
   "select_a_time": "حدد الوقت",
-  "free": "حر",
+  "free": "مجاني",
   "delivery": "توصيل",
   "campaign_schedule": "جدول الحملة",
   "order_amount": "مبلغ الطلب",
@@ -252,7 +252,7 @@
   "picked_up": "تم الاستلام",
   "delivered": "تم التوصيل",
   "refund_requested": "طلب استرداد الأموال",
-  "refunded": "ردها",
+  "refunded": "تم الاسترداد",
   "returned": "عاد",
   "failed": "فشل الدفع",
   "canceled": "تم الإلغاء",
@@ -261,12 +261,12 @@
   "status": "حالة",
   "method": "طريقة",
   "review": "مراجعة",
-  "submitted": "مُقَدَّم",
+  "submitted": "تم الإرسال",
   "give_a_rating": "إعطاء تقييم",
   "write_a_review": "اكتب مراجعة",
   "rate_his_service": "قيم خدمته",
   "rate_review": "معدل ومراجعة",
-  "items": "أغراض",
+  "items": "عناصر",
   "you_can_not_reorder_a_campaign": "لا يمكنك إعادة ترتيب الحملة",
   "reorder": "إعادة الطلب",
   "order_tracking": "تتبع الطلب",
@@ -321,7 +321,7 @@
   "you_have_to_allow": "يجب عليك السماح بإذن الموقع لاستخدام موقعك",
   "you_denied_location_permission": "لقد رفضت إذن تحديد الموقع إلى الأبد. يرجى السماح بإذن الموقع من إعدادات التطبيق الخاص بك والحصول على تسليم أكثر دقة.",
   "view_cart": "عرض العربة",
-  "close": "يغلق",
+  "close": "مغلق",
   "settings": "إعدادات",
   "service_not_available_in_current_location": "الخدمة غير متوفرة في موقعك الحالي",
   "currently_opened_restaurants": "مكاتب التمريض المفتوحة حاليا",
@@ -332,7 +332,7 @@
   "but_you_have": "ولكن لديك",
   "non_changeable": "غير قابلة للتغيير",
   "delivery_man_not_assigned": "لم يتم تعيين موظف بعد",
-  "payment": "قسط",
+  "payment": "الدفع",
   "scheduled_at": "المقرر في",
   "address": "العنوان",
   "unable_to_launch_google_map": "غير قادر على تشغيل خريطة جوجل",
@@ -372,11 +372,11 @@
   "no_category_restaurant_found": "لم يتم العثور على أي مكتب التمريض من فئة",
   "no_category_store_found": "لم يتم العثور على متجر فئة",
   "social_login": "تسجيل الدخول الاجتماعي",
-  "type": "يكتب",
+  "type": "نوع",
   "restaurant_wise": "تصنيف حسب مكتب التمريض",
   "store_wise": "متجر الحكمة",
   "zone_wise": "المنطقة الحكيمة",
-  "default": "تقصير",
+  "default": "افتراضي",
   "min_purchase": "الحد الأدنى للشراء",
   "max_discount": "ماكس الخصم",
   "coupon_code_copied": "تم نسخ رمز القسيمة",
@@ -444,7 +444,7 @@
   "news_letter": "رسالة إخبارية",
   "subscribe_to_out_new_channel_to_get_latest_updates": "اشترك في نشرتنا الإخبارية للحصول على آخر التحديثات",
   "your_email_address": "عنوان بريدك  الإلكتروني",
-  "subscribe": "يشترك",
+  "subscribe": "اشتراك",
   "follow_us_on": "تابعونا على",
   "download_our_app": "قم بتنزيل تطبيقنا",
   "download_our_apps": "قم بتنزيل تطبيقاتنا",
@@ -472,14 +472,14 @@
   "to_start_your_business": "لبدء عملك",
   "explore_more": "اكتشف المزيد",
   "pick_from_map": "اختر من الخريطة",
-  "register": "يسجل",
+  "register": "تسجيل",
   "register_as_delivery_man_and_earn_money": "سجل  كموظف توصيل واكسب المال",
   "version_1.4": "الإصدار 1.4",
   "street_number": "رقم الشارع",
   "house": "منزل",
   "floor": "أرضية",
   "sender_address": "عنوان المرسل",
-  "optional": "خياري",
+  "optional": "اختياري",
   "set_from_saved_address": "تم التعيين من العنوان المحفوظ",
   "sender_information": "معلومات المرسل",
   "pickup_information": "معلومات الالتقاط",
@@ -487,7 +487,7 @@
   "sender_phone_number": "رقم هاتف المرسل",
   "receiver_information": "معلومات المتلقي",
   "destination_information": "معلومات الوجهة",
-  "continue": "يكمل",
+  "continue": "متابعة",
   "not_provided": "غير متوفر",
   "item_details": "التفاصيل",
   "enter_sender_name": "أدخل اسم المرسل",
@@ -504,18 +504,18 @@
   "transaction_history": "تاريخ المعاملات",
   "pay_from_your_existing_balance": "ادفع من رصيدك الحالي",
   "wallet_payment": "الدفع بالمحفظة",
-  "delivery_man_tips": "نصائح موظف",
+  "delivery_man_tips": "إكرامية موظف",
   "enter_amount": "أدخل المبلغ..",
   "refer_and_earn": "الرجوع وكسب",
   "earn_money_on_every_referral": "كسب المال على كل إحالة",
   "one_referral": "1 الإحالة",
   "refer_your_code_to_your_friend": "قم بإحالة الرمز الخاص بك إلى أصدقائك",
-  "get": "يحصل",
+  "get": "حصول",
   "on_joining": "على الانضمام",
   "your_referral_code": "رمز الإحالة الخاص بك",
   "referral_code_copied": "تم نسخ رمز الإحالة",
   "tap_to_copy": "انقر للنسخ",
-  "share": "يشارك",
+  "share": "مشاركه",
   "refer_code": "رمز الرجوع (اختياري)",
   "invalid_refer_code": "رمز الإحالة غير صالح",
   "wallet": "محفظة",
@@ -649,7 +649,7 @@
   "from_gallery": "من المعرض",
   "your_prescription": "الوصفة الطبية الخاصة بك",
   "please_upload_your_prescription_images": "يرجى تحميل صورة الوصفة الطبية الخاصة بك",
-  "convert": "يتحول",
+  "convert": "تحويل",
   "you_cant_order_more_then": "لا يمكنك طلب المزيد بعد ذلك",
   "in_cash_on_delivery": "نقدا عند التسليم",
   "tax_included": "(شامل الضريبة)",
@@ -719,7 +719,7 @@
   "do_you_want_to_cancel_this_booking": "هل تريد إلغاء هذا الحجز؟",
   "use_coupon_when_select_your_car": "استخدم القسيمة عند اختيار سيارتك ",
   "collect_coupon_by_inviting_people": "جمع القسيمة عن طريق دعوة الناس",
-  "confirm": "يتأكد",
+  "confirm": "تأكيد",
   "distance_wise": "المسافة حكيمة",
   "see_details": "انظر التفاصيل",
   "vat": "ضريبة القيمة المضافة",
@@ -780,7 +780,7 @@
   "amount_can_be_convert_into_wallet_money": "يمكن تحويل المبلغ إلى أموال المحفظة",
   "invite_friends_and_business": "دعوة الأصدقاء والشركات",
   "copy_your_code_share_it_with_your_friends": "انسخ الرمز الخاص بك وشاركه مع أصدقائك",
-  "copy": "ينسخ",
+  "copy": "نسخ",
   "your_personal_code": "الرمز الشخصي الخاص بك",
   "general": "عام",
   "promotional_activity": "النشاط الترويجي",
@@ -919,7 +919,7 @@
   "do_you_want_to_use_now": "هل تريد أن تستخدم الآن؟",
   "your_wallet_balance_is": "رصيد محفظتك هو",
   "use": "يستخدم",
-  "remove": "يزيل",
+  "remove": "ازاله",
   "if_you_want_to_add_fund_to_your_wallet_then_click_add_fund_button": "إذا كنت ترغب في إضافة أموال إلى محفظتك، فانقر فوق زر إضافة أموال",
   "add_fund_form_secured_digital_payment_gateways": "إضافة نموذج صندوق بوابات الدفع الرقمية المضمونة",
   "select_payment_method": "حدد طريقة الدفع",
@@ -938,7 +938,7 @@
   "recent_searches": "عمليات البحث الأخيرة",
   "minimum_order_amount": "الحد الأدنى ",
   "wish_list": "قائمة الرغبات ",
-  "recommended": "مُستَحسَن",
+  "recommended": "موصى به",
   "search_for_items": "البحث عن العناصر...",
   "cart_list": "قائمة العربة",
   "order_summary": "ملخص الطلب",
@@ -1367,7 +1367,7 @@
   "trip_cost": "تكلفة الرحلة",
   "trip_discount": "خصم الرحلة",
   "confirm_booking": "تأكيد الحجز",
-  "wishlist": "قائمة الأمنيات",
+  "wishlist": "المفضلة",
   "please_select_pickup_time": "يرجى اختيار وقت الاستلام",
   "another_vendors_car_exist_in_your_cart": "هناك سيارة بائع آخر في سلة التسوق الخاصة بك",
   "pick_time": "اختر الوقت",
@@ -1450,30 +1450,30 @@
   "your_cart_is_empty": "سلة التسوق الخاصة بك فارغة",
   "please_enter_valid_estimate_time": "يرجى إدخال وقت تقديري صالح",
   "payment_failed": "فشل الدفع",
-  "vendor_registration": "تسجيل المورد",
-  "vendor_info": "معلومات المورد",
-  "join_as_vendor": "الانضمام كمورد",
-  "write_vendor_name": "اكتب اسم المورد",
-  "vendor_name": "اسم المورد",
-  "vendor_name_field_is_required": "حقل اسم المورد مطلوب",
-  "vendor_logo": "شعار المورد",
-  "upload_vendor_logo": "رفع شعار المورد",
-  "vendor_cover": "صورة الغلاف للمورد",
-  "upload_vendor_cover": "رفع صورة الغلاف للمورد",
-  "vendor_preference": "تفضيلات المورد",
-  "vendor_vat_tax_field_is_required": "حقل ضريبة القيمة المضافة للمورد مطلوب",
-  "this_info_will_need_for_vendor_app_and_panel_login": "ستكون هذه المعلومات ضرورية لتسجيل الدخول إلى تطبيق ولوحة المورد",
-  "vendor_will_pay": "المورد سيدفع",
-  "run_vendor_by_purchasing_subscription_packages": "قم بتشغيل المورد عن طريق شراء حزم الاشتراك. سيكون لديك إمكانية الوصول إلى ميزات لوحة المورد، والتطبيق، والتفاعل مع المستخدم وفقًا لحزم الاشتراك.",
-  "vendor_information": "معلومات المورد",
-  "write_vendor_address": "اكتب عنوان المورد",
-  "vendor_address_field_is_required": "حقل عنوان المورد مطلوب",
-  "enter_vendor_name": "أدخل اسم المورد",
-  "select_vendor_logo": "حدد شعار المورد",
-  "select_vendor_cover_photo": "حدد صورة الغلاف للمورد",
-  "set_vendor_location": "تحديد موقع المورد",
-  "provide_vendor_information_to_proceed_next": "يرجى تقديم معلومات المورد للمتابعة",
-  "open_vendor": "فتح المورد",
+  "vendor_registration": "تسجيل مقدم الخدمه",
+  "vendor_info": "معلومات مقدمه الخدمه",
+  "join_as_vendor": "الانضمام كمقدم خدمه",
+  "write_vendor_name": "اكتب اسم مقدم الخدمه",
+  "vendor_name": "اسم مقدم الخدمه",
+  "vendor_name_field_is_required": "حقل اسم مقدم الخدمه مطلوب",
+  "vendor_logo": "شعار مقدم الخدمه",
+  "upload_vendor_logo": "رفع شعار مقدم الخدمه",
+  "vendor_cover": "صورة الغلاف لمقدم الخدمه",
+  "upload_vendor_cover": "رفع صورة الغلاف لمقدم الخدمه",
+  "vendor_preference": "تفضيلات مقدم الخدمه",
+  "vendor_vat_tax_field_is_required": "حقل ضريبة القيمة المضافة لمقدم الخدمه مطلوب",
+  "this_info_will_need_for_vendor_app_and_panel_login": "ستكون هذه المعلومات ضرورية لتسجيل الدخول إلى تطبيق ولوحة مقدم الخدمه",
+  "vendor_will_pay": "سيدفع مقدم الخدمه",
+  "run_vendor_by_purchasing_subscription_packages": "قم بتشغيل مقدم الخدمه عن طريق شراء حزم الاشتراك. سيكون لديك إمكانية الوصول إلى ميزات لوحة مقدم الخدمه، والتطبيق، والتفاعل مع المستخدم وفقًا لحزم الاشتراك.",
+  "vendor_information": "معلومات مقدم الخدمه",
+  "write_vendor_address": "اكتب عنوان مقدم الخدمه",
+  "vendor_address_field_is_required": "حقل عنوان مقدم الخدمه مطلوب",
+  "enter_vendor_name": "أدخل اسم مقدم الخدمه",
+  "select_vendor_logo": "حدد شعار مقدم الخدمه",
+  "select_vendor_cover_photo": "حدد صورة الغلاف لمقدم الخدمه",
+  "set_vendor_location": "تحديد موقع مقدم الخدمه",
+  "provide_vendor_information_to_proceed_next": "يرجى تقديم معلومات مقدم الخدمه للمتابعة",
+  "open_vendor": "فتح مقدم الخدمه",
   "write_trip_id": "اكتب معرف الرحلة",
   "coupon_applied_successfully": "تم تطبيق القسيمة بنجاح",
   "trip_booking": "حجز الرحلة",
